--- a/templates/base_init.html
+++ b/templates/base_init.html
@@ -19,6 +19,7 @@
     <a href="{{ url_for('get_index') }}">Index</a>
     <a href="{{ url_for('get_creators') }}">Creators</a>
     <a href="{{ url_for('get_worlds') }}">Worlds</a>
+    <a href="{{ url_for('get_stats') }}">Stats</a>
 
     <a href="{{ url_for('get_mycreator') if (current_user.is_authenticated) else url_for('get_newcreator') }}"><b>Account</b></a>
     <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
