Better error handling

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -5,13 +5,13 @@
 
     <p>
         <ul>
-            <li>Creator count: {{ creatorcount }}</li>
-            <li>World count: {{ worldcount }}</li>
-            <li>Room count: {{ roomcount }}</li>
-            <li>Item count: {{ itemcount }}</li>
-            <li>Person count: {{ personcount }}</li>
-            <li>Objective count: {{ objectivecount }}</li>
-            <li>Junction count: {{ junctioncount }}</li>
+            <li>Creator count: {{ counts['creator'] }}</li>
+            <li>World count: {{ counts['world'] }}</li>
+            <li>Room count: {{ counts['room'] }}</li>
+            <li>Item count: {{ counts['item'] }}</li>
+            <li>Person count: {{ counts['person'] }}</li>
+            <li>Objective count: {{ counts['objective'] }}</li>
+            <li>Junction count: {{ counts['junction'] }}</li>
         </ul>
     </p>    
 {% endblock %}
