--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base_editor.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_rooms', num=world_id) }}">Rooms</a>
-    <a href="{{ url_for('get_items', num=world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', num=world_id) }}">Persons</a>
-    <a href="{{ url_for('get_objectives', num=world_id) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', num=world_id) }}">Junctions</a>
+    <a href="{{ url_for('get_rooms', world_id=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_items', world_id=world_id) }}">Items</a>
+    <a href="{{ url_for('get_persons', world_id=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_objectives', world_id=world_id) }}">Objectives</a>
+    <a href="{{ url_for('get_junctions', world_id=world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
     <br><hr><br>
 
     <p>
-        <form action="{{ url_for('post_mysolution', num=number)}}" method="POST">
+        <form action="{{ url_for('post_mysolution', objective_id=objective_id)}}" method="POST">
             <textarea name="solution" cols="50" rows="10">{{ solution }}</textarea><br>
             <script>
                 const easyMDE = new EasyMDE();
