--- a/templates/account.html
+++ b/templates/account.html
@@ -7,8 +7,8 @@
         <h4>Please enter data:</h4>
         <form action="{{ url_for('post_newcreator') }}" method="POST" oninput="result.value=!!password2.value&&(password.value==password2.value)?'Password matching.':'Passwords NOT matching!'">
             <table><tbody>
-            <tr><td width="30%">Name:</td> <td width="70%"><input type="text" name="creator" size="20" maxlength="20" minlength="5"></td></tr>
-            <tr><td>E-Mail:</td> <td><input type="email" name="mail" size="20" maxlength="100" minlength="5"></td></tr>
+            <tr><td width="30%">Name:</td> <td width="70%"><input type="text" name="creator" size="20" maxlength="20" minlength="5" onkeypress="return event.charCode != 32"></td></tr>
+            <tr><td>E-Mail:</td> <td><input type="email" name="mail" size="20" maxlength="100" minlength="5" onkeypress="return event.charCode != 32"></td></tr>
             <tr><td>Password:</td> <td><input type="password" name="password" size="20" maxlength="20" minlength="5"></td></tr>
             <tr><td>Password Verification:</td> <td><input type="password" name="password2" size="20" maxlength="20" minlength="5"></td></tr>
             <tr><td></td><td><output name="result"></output></td></tr>
