--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -7,8 +7,8 @@
         <h4>Please enter data:</h4>
         <form action="{{ url_for('post_mailcreator') }}" method="POST">
             <table><tbody>
-            <tr><td width="30%">E-Mail:</td> <td width="70%"><input type="email" name="mail" size="20" maxlength="100" minlength="5" value="{{ creator.creator_mail }}"></td></tr>
-            <tr><td>Image:</td> <td><input type="text" name="image" size="20" maxlength="200" minlength="5" value="{{ creator.creator_img }}"></td></tr>
+            <tr><td width="30%">E-Mail:</td> <td width="70%"><input type="email" name="mail" size="20" maxlength="100" minlength="5" value="{{ creator.creator_mail }}" onkeypress="return event.charCode != 32"></td></tr>
+            <tr><td>Image:</td> <td><input type="text" name="image" size="20" maxlength="200" minlength="5" value="{{ creator.creator_img }}" onkeypress="return event.charCode != 32"></td></tr>
             </tbody></table>
             <input type="submit" value="Update">
         </form>
@@ -34,7 +34,7 @@
         <h4>Delete this user account:</h4>
         <form action="{{ url_for('post_delcreator') }}" method="POST" oninput="result.value=!!(confirm.value=='delete')?'Click to continue.':'Enter delete.'">
             <table><tbody>
-            <tr><td width="30%">Confirmation:</td> <td width="70%"><input type="test" name="confirm" size="20" maxlength="20" minlength="5"></td></tr>
+            <tr><td width="30%">Confirmation:</td> <td width="70%"><input type="test" name="confirm" size="20" maxlength="20" minlength="5" onkeypress="return event.charCode != 32"></td></tr>
             <tr><td></td><td><output name="result"></output></td></tr>
             </tbody></table>
             <input type="submit" value="Delete">
