--- a/templates/item.html
+++ b/templates/item.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_rooms', num=world_id) }}">Rooms</a>
-    <a href="{{ url_for('get_items', num=world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', num=world_id) }}">Persons</a>
-    <a href="{{ url_for('get_objectives', num=world_id ) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', num=world_id) }}">Junctions</a>
+    <a href="{{ url_for('get_rooms', world_id=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_items', world_id=world_id) }}">Items</a>
+    <a href="{{ url_for('get_persons', world_id=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_objectives', world_id=world_id ) }}">Objectives</a>
+    <a href="{{ url_for('get_junctions', world_id=world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
     <p>
         <ul>
             {% for item in items %}
-            <li><a href="{{ url_for('get_item', num=item.item_id)}}">{{ item.item_name }} (#{{ item.item_id }})</a></li>
+            <li><a href="{{ url_for('get_item', item_id=item.item_id)}}">{{ item.item_name }} (#{{ item.item_id }})</a></li>
             {% endfor %}
         </ul>
     </p>
