--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_rooms', num=person.world_id) }}">Rooms</a>
-    <a href="{{ url_for('get_items', num=person.world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', num=person.world_id) }}">Persons</a>
-    <a href="{{ url_for('get_objectives', num=person.world_id ) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', num=person.world_id) }}">Junctions</a>
+    <a href="{{ url_for('get_rooms', world_id=person.world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_items', world_id=person.world_id) }}">Items</a>
+    <a href="{{ url_for('get_persons', world_id=person.world_id) }}">Persons</a>
+    <a href="{{ url_for('get_objectives', world_id=person.world_id ) }}">Objectives</a>
+    <a href="{{ url_for('get_junctions', world_id=person.world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
     <h2>{% block title %} {{ person.person_name }} (#{{ person.person_id }}) {% endblock %}</h2>
     
     <p>
-        <i>Found in <a href="{{ url_for('get_room', num=person.room_id)}}">Room ID #{{ person.room_id }}</a></i></br>
+        <i>Found in <a href="{{ url_for('get_room', room_id=person.room_id)}}">Room ID #{{ person.room_id }}</a></i></br>
         <table><tbody>
             <tr><td width="30%">Description:</td> <td width="70%">{{ person.person_desc }}</td></tr>
         </tbody></table>
@@ -23,6 +23,6 @@
     </p>
 
     <p>
-        <a href="{{ url_for('get_persons', num=person.world_id) }}">All Persons</a>
+        <a href="{{ url_for('get_persons', world_id=person.world_id) }}">All Persons</a>
     </p>
 {% endblock %}
