--- a/templates/quest_detail.html
+++ b/templates/quest_detail.html
@@ -1,18 +1,18 @@
 {% extends 'base_editor.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_rooms', num=world_id) }}">Rooms</a>
-    <a href="{{ url_for('get_items', num=world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', num=world_id) }}">Persons</a>
-    <a href="{{ url_for('get_objectives', num=world_id) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', num=world_id) }}">Junctions</a>
+    <a href="{{ url_for('get_rooms', world_id=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_items', world_id=world_id) }}">Items</a>
+    <a href="{{ url_for('get_persons', world_id=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_objectives', world_id=world_id) }}">Objectives</a>
+    <a href="{{ url_for('get_junctions', world_id=world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
     <h2>{% block title %} Single Quest {% endblock %}</h2>
 
     <p>
-        <form action="{{ url_for('post_quest', num=number)}}" method="POST">
+        <form action="{{ url_for('post_quest', objective_id=objective_id)}}" method="POST">
             <textarea name="quest" cols="50" rows="10">{{ quest }}</textarea>
             <script>
                 const easyMDE = new EasyMDE();
