--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block links %}
-    <a href="{{ url_for('get_rooms', num=world_id) }}">Rooms</a>
-    <a href="{{ url_for('get_items', num=world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', num=world_id) }}">Persons</a>
-    <a href="{{ url_for('get_objectives', num=world_id) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', num=world_id) }}">Junctions</a>
+    <a href="{{ url_for('get_rooms', world_id=world_id) }}">Rooms</a>
+    <a href="{{ url_for('get_items', world_id=world_id) }}">Items</a>
+    <a href="{{ url_for('get_persons', world_id=world_id) }}">Persons</a>
+    <a href="{{ url_for('get_objectives', world_id=world_id) }}">Objectives</a>
+    <a href="{{ url_for('get_junctions', world_id=world_id) }}">Junctions</a>
 {% endblock %}
 
 {% block content %}
@@ -16,12 +16,12 @@
     </p>
 
     <p>
-        <form action="{{ url_for('get_likesolution', num=number) }}" method="GET">
+        <form action="{{ url_for('get_likesolution', solution_id=solution_id) }}" method="GET">
             <input type="submit" value="Like / Unlike">
         </form>
     </p>
 
     <p>
-        <a href="{{ url_for('get_objectives', num=world_id) }}">All Objectives</a>
+        <a href="{{ url_for('get_objectives', world_id=world_id) }}">All Objectives</a>
     </p>
 {% endblock %}
