Further improve stability

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 
     <p>
         <img src="/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
+        <img src="/static/info_logo.png" alt="Info Logo" width="25%" height="25%">
     </p>
 
     <p>
