--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,6 @@
     <a href="{{ url_for('get_mycreator') if (current_user.is_authenticated) else url_for('get_newcreator') }}"><b>Account</b></a>
     <a href="{{ url_for('get_storage') }}"><b>Storage</b></a>
     <a href="/static/doc/index.html"><b>Documentation</b></a>
-    <!--<a href="/wetty/ssh/game?pass=game"><b>Start game</b></a>-->
   </nav>
 
   <main>
@@ -31,7 +30,7 @@
 
   <footer>
     <p><a href="{{ url_for('get_logged') }}">Log in</a>, {{ 'Logged in as ' + current_user.creator_name + ', ' if (current_user.is_authenticated) }}<a href="{{ url_for('get_logout') }}">Log out</a></p>
-    <p>Version: 0.9 (WIP)</p>
+    <p>Version: 0.95 (Alpha)</p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
 </body>
