--- a/templates/creator.html
+++ b/templates/creator.html
@@ -4,6 +4,9 @@
     <h2>{% block title %} All Creators {% endblock %}</h2>
 
     <p>
+        {% if creators.count() == 0 %}
+        No entries found.
+        {% endif %}
         <ul>
             {% for creator in creators %}
             <li><a href="{{ url_for('get_creator', creator_id=creator.creator_id)}}">{{ creator.creator_name }} (#{{ creator.creator_id }})</a></li>
