--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,35 @@
     
     <p>
         <h4>Enter your login data:</h4>
-        <form action="{{ url_for('post_login') }}" method="POST">
-            <table><tbody>
-            <tr><td width="30%">Name:</td> <td width="70%"><input type="text" name="creator" size="20" maxlength="20" minlength="5"></td></tr>
-            <tr><td>Password:</td> <td><input type="password" name="password" size="20" maxlength="20" minlength="5"></td></tr>
-            </tbody></table>
-            <input type="checkbox" name="remember">Remember me<br>
+        <form action="{{ url_for('get_login') }}" method="POST">
+            {{ form.csrf_token }}
+            <p>
+                <table><tbody>
+                <tr><td width="30%">{{ form.creator.label }}</td> <td width="70%">{{ form.creator(size=20) }}</td></tr>
+                <tr><td>{{ form.password.label }}</td> <td>{{ form.password(size=20) }}</td></tr>
+                </tbody></table>
+            </p>
+            <ul class="errors">
+                {% for error in form.creator.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            <ul class="errors">
+                {% for error in form.password.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+
+            <p>
+                {{ form.remember() }} {{ form.remember.label }}
+            </p>
+            {% if form.remember.errors %}
+            <ul class="errors">
+                {% for error in form.remember.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
             <input type="submit" value="Log in">
         </form>
     </p>
