--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -52,9 +52,11 @@
 
     <p>
         <h4>Edit Data</h4>
+        {% if current_user.creator_id == objective.world_id %}
         <form action="{{ url_for('get_quest', objective_id=objective.objective_id)}}">
             <input type="submit" value="Edit Master Quest" />
         </form>
+        {% endif %}
         <form action="{{ url_for('get_mysolution', objective_id=objective.objective_id)}}">
             <input type="submit" value="Edit My Solution" />
         </form>
