--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -15,11 +15,13 @@
         {{ mdsolution|safe }}
     </p>
 
+    {% if current_user.creator_id != solution.creator_id %}
     <p>
-        <form action="{{ url_for('get_likesolution', solution_id=solution_id) }}" method="GET">
+        <form action="{{ url_for('get_likesolution', solution_id=solution.solution_id) }}" method="GET">
             <input type="submit" value="Like / Unlike">
         </form>
     </p>
+    {% endif %}
 
     <p>
         <a href="{{ url_for('get_objectives', world_id=world_id) }}">All Objectives</a>
