Improve walkthrough generator

--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -11,6 +11,7 @@
             <p>
                 <table><tbody>
                 <tr><td width="30%">{{ form1.email.label }}</td> <td width="70%">{{ form1.email(size=20) }}</td></tr>
+                <tr><td>{{ form1.description.label }}</td> <td>{{ form1.description(size=40) }}</td></tr>
                 <tr><td>{{ form1.url.label }}</td> <td>{{ form1.url(size=20) }}</td></tr>
                 </tbody></table>
             </p>
