--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
   <footer>
     <p><a href="{{ url_for('get_logged') }}">Log in</a>, {{ 'Logged in as ' + current_user.creator_name + ', ' if (current_user.is_authenticated) }}<a href="{{ url_for('get_logout') }}">Log out</a></p>
-    <p>Version: 0.95 (Alpha)</p>
+    <p>Version: {{ version }}</p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
 </body>
