--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <h2>{% block title %} Welcome to {% endblock %}</h2>
 
     <p>
-        <img src="/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
-        <img src="/static/info_logo.png" alt="Info Logo" width="25%" height="25%">
+        <img src="{{ prefix }}/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
+        <img src="{{ prefix }}/static/info_logo.png" alt="Info Logo" width="25%" height="25%">
     </p>
 
     <p>
