Migrate S3 from strato to contabo

--- a/templates/storage.html
+++ b/templates/storage.html
@@ -28,7 +28,7 @@
         {% for item in contents %}
             <li>
                 <b>{{ item.Key }}</b>: [<a href="{{ url_for('get_download', creatorname='.', filename=item.Key) }}">download</a>, <a href="{{ url_for('get_delete', creatorname='.', filename=item.Key) }}">delete</a>]<br>
-                ![{{ item.Key }}](https://s3.hidrive.strato.com/kringle-public/{{ item.Key }})
+                ![{{ item.Key }}](https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ item.Key }})
             </li>
         {% endfor %}
         </ul>
