--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -52,7 +52,7 @@
 
     <p>
         <h4>Edit Data</h4>
-        {% if current_user.creator_id == objective.world_id %}
+        {% if current_user.creator_id == world[objective.world_id].creator_id %}
         <form action="{{ url_for('get_quest', objective_id=objective.objective_id)}}">
             <input type="submit" value="Edit Master Quest" />
         </form>
