--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -3,9 +3,9 @@
 {% block links %}
     <a href="{{ url_for('get_rooms', world_id=junction.world_id) }}">Rooms</a>
     <a href="{{ url_for('get_items', world_id=junction.world_id) }}">Items</a>
-    <a href="{{ url_for('get_persons', world_id=junction.world_id) }}">Persons</a>
+    <!--<a href="{{ url_for('get_persons', world_id=junction.world_id) }}">Persons</a>-->
     <a href="{{ url_for('get_objectives', world_id=junction.world_id ) }}">Objectives</a>
-    <a href="{{ url_for('get_junctions', world_id=junction.world_id) }}">Junctions</a>
+    <!--<a href="{{ url_for('get_junctions', world_id=junction.world_id) }}">Junctions</a>-->
 {% endblock %}
 
 {% block content %}
